--- a/index.html
+++ b/index.html
@@ -57,7 +57,21 @@
         display: inline-block;
       }
     </style>
-  </head>
+   <!-- MathJax: 수식 렌더링 -->
+<script>
+  window.MathJax = {
+    tex: {
+      inlineMath: [['$', '$'], ['\\(', '\\)']],
+      displayMath: [['$$', '$$'], ['\\[', '\\]']]
+    },
+    svg: { fontCache: 'global' }
+  };
+</script>
+<script
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"
+  async>
+</script>
+   </head>
   <body class="font-sans w-full text-surface">
     <header class="relative bg-white mx-auto border-b border-gray-300">
       <nav
