--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Data Science Blog | Changyu</title>
   
     <!-- Open Graph -->
-    <meta property="og:title" content="Data Science Portfolio | Changyu" />
-    <meta property="og:description" content="통계 · 머신러닝 · 텍스트 마이닝 연구 기록" />
+    <meta property="og:title" content="Data Science blog | Changyu" />
+    <meta property="og:description" content="통계 · 머신러닝 · 딥러닝 공부 기록" />
     <meta property="og:type" content="website" />
 
     <!-- marked -->
